# soc_data

./: .gitignore  AGENTS.md  AI_HANDOFF.md  DEVELOPMENT_PROGRESS.md  PHASE1_WAIVERS.md  POWER_FEATURE_MVP.md  README.md  functional_enhancements.md  pyproject.toml
backend/: config.py  db.py  imports.py  main.py  migrations.py  models.py  power.py  requirements.txt  schemas.py  seed.py
backend/services/: __init__.py  area_rollup.py  metric_service.py  partition_mapping.py  quality_rules.py
docs/: CODEX_AGENT_STATUS.md  CODEX_PHASE2_HARDENING_PLAN.md  schema_v7.md
frontend/: index.html  package-lock.json  package.json  soc_3_dic_phase_1_prototype.jsx
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: client.ts  components.ts  databases.ts  impl_options.ts  imports.ts  metrics.ts  power.ts  projects.ts  quality.ts  responsibilities.ts  scenarios.ts  tiers.ts
scripts/: build_import_template.mjs  check_phase1.py  create_import_template.py  create_physical_model_review_workbook.py  deploy_linux.sh  deploy_windows.ps1  stop_backend.ps1  verify_import.py
templates/: soc_import_demo.xlsx  soc_import_template.xlsx  soc_mapping_metrics_review_v2.xlsx  soc_mapping_metrics_review_v3.xlsx  soc_mapping_metrics_review_v4.xlsx  soc_mapping_metrics_review_v5.xlsx  soc_mapping_metrics_review_v6.xlsx  soc_mapping_metrics_review_v7.xlsx  soc_mapping_metrics_review_v7_resource_category.xlsx  soc_physical_mapping_review.xlsx  soc_physical_model_review.xlsx
tests/: conftest.py  test_db_switch.py  test_import_validation.py  test_phase1_api.py  test_schema_migrations.py
(+28 files in other folders)
